update model paths

--- a/config.json
+++ b/config.json
@@ -37,7 +37,7 @@
     },
     "ollama_host": "http://127.0.0.1:11434",
     "ollama_enabled": true,
-    "ollama_model": "qwen2.5vl:latest",
+    "ollama_model": "llava:7b",
     "hybrid_mode": true
   },
   "visicooler_config": {
