--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
   },
   "yolo_config": {
     "yaml_path": "data/data 1.yaml",
-    "model_path": "data/yolov8l_v1.1_4554.pt",
+    "model_path": "data/yolov8l latest.pt",
     "image_source_s3_folder": "STORE_IMAGES/",
     "output_s3_folder": "ModelResults/",
     "csv_output_path": "outputs/prediction_output.csv",
@@ -44,7 +44,7 @@
     "shelf_model_path": "data/shelfmodel.pt",
     "caps_model_path": "data/capmodel.pt",
     "yaml_path": "data/data 1.yaml",
-    "model_path": "data/yolov8l_v1.1_4554.pt",
+    "model_path": "data/yolov8l latest.pt",
     "output_folder_path": "outputs/segmented_images/",
     "shelf_class_id": 80,
     "conf_threshold": 0.05
