--- a/config.json
+++ b/config.json
@@ -26,6 +26,8 @@
   "ollama_config": {
     "image_folder_s3": "STORE_IMAGES/",
     "output_s3_folder": "ModelResults/",
+    "activation_yolo_model": "",
+    "hybrid_mode": true,
     "output_csv": "outputs/ollama_analysis_results.csv",
     "class_ids_path": "data/class_ids.json",
     "prompt_path": "data/prompts/",
